# spektralwerk-scpi-client

./: .bumpversion.cfg  .bumpversion.toml  .codespellrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml  style.yml
examples/: spektralwerk_core_advanced_demo.py  spektralwerk_core_demo.py
make.d/: makefilet-download-ondemand.mk
spektralwerk_scpi_client/: exceptions.py
spektralwerk_scpi_client/devices/: __init__.py  models.py  spektralwerk_core.py
spektralwerk_scpi_client/scpi/: __init__.py  commands.py  mnemonics.py  units.py
spektralwerk_scpi_client/utils/: convert.py
tests/: test_spektralwerk.py  test_utils.py
